added favicon and changed bg color

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 body {
-  background-color: #d4d4c8 !important; 
+  background-color: #EDEDE9  !important;
+  /* EDEDE9 
+  d4d4c8 */
 
   /* d4d4c8 */
 }
