added transition color over hover links

--- a/src/Header.css
+++ b/src/Header.css
@@ -50,7 +50,12 @@
   margin-left: 50px;
   cursor: pointer;
 }
-
+a {
+  transition: color 0.2s;
+}
+a:hover{
+  color: #6B705C;
+}
 /* .jhoText{
   cursor: pointer;
 } */
