--- a/src/Experience.css
+++ b/src/Experience.css
@@ -95,3 +95,13 @@ li span {
 ul{
   list-style-position: inside;
 }
+
+
+#drivingRobotPic{
+  margin-left: -1.5em;
+  width: 450px;
+  height: auto;
+  /* border: 2px solid black; */
+  
+  
+}
