added scroll to top button

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -34,5 +34,39 @@
   }
   to {
     transform: rotate(360deg);
+  }
+} */
+
+.App {
+  text-align: center;
+  /* height: 5000px; */
+}
+
+.scrollTop {
+  position: fixed; 
+  width: 40px;
+  height: auto;
+  bottom: 50px;
+  align-items: center;
+  height: 20px;
+  justify-content: center;
+  z-index: 1;
+  cursor: pointer;
+  animation: fadeIn 0.3s;
+  transition: opacity 0.4s;
+  opacity: 1;
+
+}
+
+.scrollTop:hover{
+  opacity: 1;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0.5;
   }
 }
